[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testforge"
version = "0.1.0"
description = "An agentic test generation system for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "huggingface-hub>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = []
