[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testforge"
version = "0.1.0"
description = "An agentic test generation system for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "litellm>=1.40.0",
    "mutmut>=3.0.0",
    "langgraph>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "structlog>=24.0.0",
    "mlflow>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = ["PLR2004", "PLC0415", "PLW0603", "PLR0913", "PLW1510", "N815"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
